--- a/src/app/home/productos/productos.component.css
+++ b/src/app/home/productos/productos.component.css
@@ -1,3 +1,22 @@
+*{
+  color:black
+}
+
+.btn-cart, .btn{
+  background-color: rgba(241, 126, 213, 0.70) !important;
+  color:#FFFFFF !important;
+}
+
+.btn-cart:hover{
+  background-color: rgba(241, 126, 213, 100) !important;
+  color:#FFFFFF !important;
+}
+
+.btn-cart:disabled{
+  background-color: rgba(241, 126, 213, 0.50) !important;
+  color:#FFFFFF !important;
+}
+
 .img-container {
   display:flex;
   flex-wrap: wrap;
@@ -25,15 +44,27 @@
   }
 
   .btn-product-img:hover{
-    border: solid 2.5px #2196F3;
+    border: solid 2.5px rgba(241, 126, 213, 0.67);
     border-radius: 50%;
   }
 
   .btn-product-img-focus {
-    border: solid 2.5px blue;
+    border: solid 2.5px rgba(241, 126, 213, 0.67);;
     border-radius: 50%;
   }
 
   mat-slider {
     width: 80%;
+    color: warn !important;
+  }
+  .mat-slider-start-thumb {
+    background-color: #AAAAAA !important;
+  }
+
+  .mat-slider-start-thumb-label {
+    background-color: #AAAAAA !important;
+  }
+
+  .mat-slider-track-fill {
+    background-color: #AAAAAA !important;
   }
