--- a/src/app/administracion/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/administracion/dashboard-admin/dashboard-admin.component.html
@@ -11,8 +11,8 @@
             <main class="dash-content">
                 <div class="container-fluid">
                     <div class="row dash-row">
-                        <div class="col-xl-4">
-                            <div class="stats stats-primary blue">
+                        <div class="col-xl-6">
+                            <div class="stats stats-info blue">
                                 <h3 class="stats-title"> Clientes registrados </h3>
                                 <div class="stats-content">
                                     <div class="stats-icon">
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-xl-6">
                             <div class="stats stats-success green">
                                 <h3 class="stats-title"> Ventas </h3>
                                 <div class="stats-content">
@@ -41,7 +41,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-4">
+                        <div class="col-xl-6">
                             <div class="stats stats-danger red">
                                 <h3 class="stats-title"> Productos disponibles </h3>
                                 <div class="stats-content">
