--- a/src/app/home/menu-admin/menu-admin.component.html
+++ b/src/app/home/menu-admin/menu-admin.component.html
@@ -3,7 +3,10 @@
         <a class="menu-toggle">
             <i class="fas fa-bars"></i>
         </a>
-        <a class="spur-logo" href="#" routerLink="/inicio">Soka shoes</a>
+        <a href="index.html" class="logo">
+            <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true" alt="Molla Logo" width="105" height="25">
+        </a>
+        
     </header>
     
     <nav class="dash-nav-list">
@@ -16,8 +19,26 @@
         <a routerLink="/listaproductos" class="dash-nav-item">
             <i class="fas fa-chart-bar"></i> Productos</a>
 
-        <a routerLink="/agregarProducto" class="dash-nav-item">
-            <i class="fas fa-plus"></i> Agregar producto</a>
-
+        <a routerLink="/marcas" class="dash-nav-item">
+                <i class="fas fa-crown"></i> Marcas</a>
+        
+        <a routerLink="/editarinfo" class="dash-nav-item">
+                    <i class="fas fa-user"></i> Mi perfil</a>
+        
+        <a href="login.html" class="dash-nav-item">
+                    <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Cerrar sesión</a>
+                <!--
+        <div class="tools">
+                    <div class="dropdown tools-item">
+                        <a href="#" class="" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <i class="fas fa-user"></i>
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                            <a class="dropdown-item" routerLink="/editarinfo" >Mi Perfil</a>
+                            <a class="dropdown-item" href="login.html">Cerrar sesión</a>
+                        </div>
+                    </div>
+                </div>
+            -->
     </nav>
 </div>
