Menu dashboard check

--- a/src/app/home/menu-admin/menu-admin.component.html
+++ b/src/app/home/menu-admin/menu-admin.component.html
@@ -4,29 +4,29 @@
             <i class="fas fa-bars"></i>
         </a>
         <a href="index.html" class="logo">
-            <img src="https://github.com/SantiagoAndresSerrano/img-soka/blob/master/sokaSlogo.png?raw=true" alt="Molla Logo" width="105" height="25">
+            <img src="../../../assets/images/sokaSlogo 1.png" alt="Molla Logo" width="105" height="25">
         </a>
         
     </header>
     
     <nav class="dash-nav-list">
-        <a routerLink="/admin" class="dash-nav-item">
+        <a routerLink="/admin" class="dash-nav-item color">
             <i class="fas fa-home"></i> Dashboard </a>
             
-        <a routerLink="/empleados" class="dash-nav-item">
+        <a routerLink="/empleados" class="dash-nav-item color">
             <i class="fas fa-child"></i> Usuarios </a>
 
-        <a routerLink="/listaproductos" class="dash-nav-item">
+        <a routerLink="/listaproductos" class="dash-nav-item color">
             <i class="fas fa-chart-bar"></i> Productos</a>
 
-        <a routerLink="/marcas" class="dash-nav-item">
+        <a routerLink="/marcas" class="dash-nav-item color">
                 <i class="fas fa-crown"></i> Marcas</a>
         
-        <a routerLink="/editarinfo" class="dash-nav-item">
+        <a routerLink="/editarinfo" class="dash-nav-item color">
                     <i class="fas fa-user"></i> Mi perfil</a>
         
-        <a href="login.html" class="dash-nav-item">
-                    <i class="fa-sharp fa-solid fa-right-from-bracket"></i> Cerrar sesión</a>
+        <a href="login.html" class="dash-nav-item color">
+                    <i class="fas fa-sign-out-alt"></i> Cerrar sesión</a>
                 <!--
         <div class="tools">
                     <div class="dropdown tools-item">
