--- a/src/app/administracion/dashboard-admin/dashboard-admin.component.html
+++ b/src/app/administracion/dashboard-admin/dashboard-admin.component.html
@@ -12,7 +12,7 @@
                 <div class="container-fluid">
                     <div class="row dash-row">
                         <div class="col-xl-6">
-                            <div class="stats stats-info blue">
+                            <div class="stats stats-info " style="background-color: #d29bfd ;">
                                 <h3 class="stats-title"> Clientes registrados </h3>
                                 <div class="stats-content">
                                     <div class="stats-icon">
@@ -27,7 +27,7 @@
                             </div>
                         </div>
                         <div class="col-xl-6">
-                            <div class="stats stats-success green">
+                            <div class="stats stats-success " style="background-color: #cbddb5 ;">
                                 <h3 class="stats-title"> Ventas </h3>
                                 <div class="stats-content">
                                     <div class="stats-icon">
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="col-xl-6">
-                            <div class="stats stats-danger red">
+                            <div class="stats stats-danger " style="background-color: #abdefa ;">
                                 <h3 class="stats-title"> Productos disponibles </h3>
                                 <div class="stats-content">
                                     <div class="stats-icon">
