--- a/src/app/administracion/page/empleado/empleado.component.html
+++ b/src/app/administracion/page/empleado/empleado.component.html
@@ -7,22 +7,20 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
             <div style="margin: 10px;" class="card spur-card">
-              <div class="card-header">
+              <div class="card-header" style="background-color: rgba(241, 126, 213, 0.18);">
                 <div class="spur-card-icon">
-                  <i class="fas fa-table"></i>
+                  <i class="fas fa-table"style="color: #f17ed5;"></i>
                 </div>
-                <div class="spur-card-title">Lista de Usuarios</div>
+                <div class="spur-card-title" style="color: black">Lista de Usuarios</div>
               </div>
               <div class="card-body ">
                 <table class="table table-in-card">
 
                   <thead>
                     <tr>
-                      <th scope="col">ID</th>
-                      <th scope="col">Id_usuario</th>
+                      <th scope="col">ID Usuario</th>
                       <th scope="col">Email</th>
                       <th scope="col">Username</th>
-                      <th scope="col">Password</th>
                       <th scope="col">Editar</th>
 
                     </tr>
@@ -31,11 +29,9 @@
 
                   <tbody>
                     <tr *ngFor="let usuario of usuarios; let i =index">
-                      <td scope="row">{{i+1}}</td>
-                      <td>{{usuario.id_usuario}}</td>
+                      <td>{{usuario.idUsuario}}</td>
                       <td>{{usuario.email}}</td>
                       <td>{{usuario.username}}</td>
-                      <td>{{usuario.password}}</td>
 
                       <td><button (click)="editar(usuario.id_usuario)" class="btn-editar"><i class="fas fa-edit"></i></button></td>
                      
