--- a/src/app/administracion/page/categoria/categoria.component.html
+++ b/src/app/administracion/page/categoria/categoria.component.html
@@ -7,11 +7,11 @@
           <div class="col-lg-1"></div>
           <div class="col-lg-10">
             <div style="margin: 10px;" class="card spur-card">
-              <div class="card-header">
+              <div class="card-header" style="background-color: rgba(241, 126, 213, 0.18);">
                 <div class="spur-card-icon">
-                  <i class="fas fa-table"></i>
+                  <i class="fas fa-table" style="color: #f17ed5;"></i>
                 </div>
-                <div class="spur-card-title">Lista de Categorias</div>
+                <div class="spur-card-title" style="color: black">Lista de Categorias</div>
               </div>
               <div class="card-body ">
                 <table class="table table-in-card">
@@ -30,7 +30,7 @@
                       <td>{{categoria.nombre}}</td>
                       <td>{{categoria.descripcion}}</td>
                       <td><button (click)="editar(categoria.idCategoria)" class="btn-editar"><i class="fas fa-edit"></i></button></td>
-                      <td><button (click)="editar(categoria.idCategoria)" class="btn-editar"><i class="fas fa-trash-alt"></i></button></td>
+                      <td><button (click)="editar(categoria.idCategoria)" class="btn-eliminar btn-danger"><i class="fas fa-trash-alt"></i></button></td>
                     </tr>
                   </tbody>
                 </table><br>
