--- a/src/app/home/footer/footer.component.html
+++ b/src/app/home/footer/footer.component.html
@@ -1,11 +1,12 @@
-<footer class=" foot">
+<div></div>
+<footer class=" foot footer ">
     <div class="backrosa">
         <div class="center"><div class="card">
             <div class="card-body">
-                Somos fabricantes y proveedores de calzado de mujer construido por los mejores profesionales del sector , materiales de primera calidad. Comercializamos diseños modernos de plataformas, sandalias, mocasines y calzado para eventos perfectos para cada ocasión.
+                Somos fabricantes y proveedores de calzado de mujer construido por los mejores profesionales del sector, materiales de primera calidad. Comercializamos diseños modernos de plataformas, sandalias, mocasines y calzado para eventos perfectos para cada ocasión.
             </div>
           </div>
-        </div>
+        </div></div>
         <div class="row redes">
             <div class="col-6">
                 <div class="row">
@@ -23,13 +24,13 @@
             
         </div>
         <hr>
-    </div>
+    
     
     
     <div class="row terms">
         <div class="col-8 mt-3">
             <div class="row mt-3">
-                <div class="col-3 mt-4"><p>© 2023  All rights reserved.</p></div> <div class="col-5"></div>
+                <div class="col-3 mt-4"><p style="color: #f17de5;">© 2023  All rights reserved.</p></div> <div class="col-5"></div>
                 <div class="col-3 mt-3"><img src="../../../assets/images/sokaSlogo 1.png" alt=""></div>
             </div>
         </div>
