--- a/src/app/home/inicio/inicio.component.html
+++ b/src/app/home/inicio/inicio.component.html
@@ -43,6 +43,7 @@
                         <div class="row ">
                             <div class="col-4 " *ngFor="let categoria of categorias; let img of imgs">
                                 <img src="../../../assets/images/image 11.png" alt="img">
+                                <!-- <img src="{{img.src}}" alt="img"> -->
                                 <h4>{{categoria.nombre}}</h4>
                                 <p>{{categoria.descripcion}}</p>
                             </div>
