--- a/src/app/administracion/page/empleado/empleado.component.html
+++ b/src/app/administracion/page/empleado/empleado.component.html
@@ -30,6 +30,8 @@
                   <tbody>
                     <tr *ngFor="let usuario of usuarios; let i =index">
                       <td>{{usuario.idUsuario}}</td>
+                      <td>{{usuario.idUsuario.idrol}}</td>
+
                       <td>{{usuario.email}}</td>
                       <td>{{usuario.username}}</td>
 
