--- a/src/app/home/header/header.component.html
+++ b/src/app/home/header/header.component.html
@@ -36,7 +36,7 @@
                         </a>
                     </div>
                     <div class="">
-                        <a routerLink="/carrito" class="color">
+                        <a routerLink="/miscompras" class="color">
                             <i class="fas fa-shopping-bag icons"></i>
                             <p class="pr-1">Mis compras</p>
                         </a>
