--- a/src/app/administracion/page/categoria/form-categoria/form-categoria.component.html
+++ b/src/app/administracion/page/categoria/form-categoria/form-categoria.component.html
@@ -27,7 +27,7 @@
                       <input formControlName="descripcion" type="text" class="form-control" id="descripcion" placeholder="Descripcion">
                     </div>
   
-                    <button type="button" class="btn btn-primary" (click)="agregarProducto()">Agregar</button>
+                    <button type="button" class="btn btn-primary" (click)="guardarCategoria()">Guardar</button>
                   </form>
                 </div>
               </div>
