Categorias agregado al menu

--- a/src/app/home/menu-admin/menu-admin.component.html
+++ b/src/app/home/menu-admin/menu-admin.component.html
@@ -19,6 +19,9 @@
         <a routerLink="/listaproductos" class="dash-nav-item color">
             <i class="fas fa-chart-bar"></i> Productos</a>
 
+        <a routerLink="/categorias" class="dash-nav-item color">
+            <i class="fas fa-th-large"></i> Categorias</a>
+
         <a routerLink="/marcas" class="dash-nav-item color">
                 <i class="fas fa-crown"></i> Marcas</a>
         
