--- a/src/app/home/mis-compras/mis-compras.component.html
+++ b/src/app/home/mis-compras/mis-compras.component.html
@@ -19,13 +19,13 @@
         <div class="cart">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-9">
+                    <div class="col-lg-12" style="justify-content: center;">
                         <table class="table table-cart table-mobile">
                             <thead>
                                 <tr>
                                     <th>Id Compra</th>
                                     <th>Estado</th>
-                                    <th>TotalCompra</th>
+                                    <th>Total Compra</th>
                                     <th>Fecha</th>
                                     <th>Direccion</th>
                                     <th>Ciudad</th>
@@ -43,14 +43,14 @@
                                         <h3 class="product-title"> {{compra.estado}}</h3>
                                     </td>
                                     
-                                    <td width="80">
-                                        <h3 class="product-title"> {{compra.totalCompra}}</h3>
+                                    <td width="90">
+                                        <h3 class="product-title">$ {{compra.totalCompra}}</h3>
                                     </td>
 
-                                    <td width="100">
+                                    <td width="110">
                                         <h3 class="product-title"> {{compra.fecha}}</h3>
                                     </td>
-                                    <td width="80">
+                                    <td width="130">
                                         <h3 class="product-title"> {{compra.direccion.direccion}}</h3>
                                     </td>
                                     <td width="80">
