--- a/src/app/home/marcas/marcas.component.html
+++ b/src/app/home/marcas/marcas.component.html
@@ -1,45 +1,63 @@
 <body>
-    <div class="dash">
-      <div class="dash-app">
-        <app-menu-admin></app-menu-admin>
-        <app-header-admin></app-header-admin>
-        <div class="row">
-          <div class="col-lg-1"></div>
-          <div class="col-lg-10">
-            <div style="margin: 10px;" class="card spur-card">
-              <div class="card-header">
-                <div class="spur-card-icon">
-                  <i class="fas fa-table"></i>
-                </div>
-                <div class="spur-card-title">Lista de marcas</div>
+  <div class="dash">
+    <div class="dash-app">
+      <app-menu-admin></app-menu-admin>
+      <app-header-admin></app-header-admin>
+      <div class="row">
+        <div class="col-lg-1"></div>
+        <div class="col-lg-10">
+          <div style="margin: 10px;" class="card spur-card">
+            <div class="card-header" style="background-color: rgba(241, 126, 213, 0.18);">
+              <div class="spur-card-icon">
+                <i class="fas fa-table"style="color: #f17ed5;"></i>
               </div>
-              <div class="card-body ">
-                <table class="table table-in-card">
-                  <thead>
-                    <tr>
-                      <th scope="col">Id</th>
-                      <th scope="col">Nombre</th>
-                      <th scope="col">Editar</th>
-                      <th scope="col">Eliminar</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let marca of marcas; let i =index">
-                      <td scope="row">{{i+1}}</td>
-                      <td>{{marca.nombre}}</td>
-                      
-                      <td><button (click)="editar(marca.idMarca)" class="btn-editar"><i class="fas fa-edit"></i></button></td>
-                      <td><button (click)="eliminar(marca.idMarca)" class="btn-editar"><i class="fas fa-trash-alt"></i></button></td>
+              <div class="spur-card-title" style="color: black">Lista de Marcas</div>
+            </div>
+            <div class="card-body ">
+              <table class="table table-in-card">
 
-                    </tr>
-                  </tbody>
-                </table><br>
-                <button (click)="agregar()" class="btn btn-primary">Agregar</button>
-              </div>
+                <thead>
+                  <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Nombre</th>
+                    <th scope="col">Editar</th>
+                    <th scope="col">Eliminar</th>
+                  </tr>
+                </thead>
+
+
+                <tbody>
+                  <tr *ngFor="let marca of marcas; let i =index">
+                    <td>{{marca.idMarca}}</td>
+                    <td>{{marca.nombre}}</td>
+                    
+                    <td nzAlign="center">           
+                      <a [routerLink]="['/editarMarca',marca.idMarca]">
+                        g<i nz-icon nzType="edit" nzTheme="outline" style="font-size: 20px"></i>
+                      </a>
+                    </td>
+
+                    <td nzAlign="center">           
+                      <a [routerLink]="['/eliminarMarca',marca.idMarca]">
+                        g<i nz-icon nzType="eliminar" nzTheme="outline" style="font-size: 20px"></i>
+                      </a>
+                    </td>
+
+                  </tr>
+                </tbody>
+              </table><br>
+
+              <div class="container-contact100-form-btn">
+                <button (click)="agregar()" class="btn " type="submit">Agregar</button>
+            </div>
+            
+
+
+
             </div>
           </div>
         </div>
       </div>
     </div>
-  </body>
-  
+  </div>
+</body>
