--- a/src/app/administracion/page/categoria/form-categoria/form-categoria.component.css
+++ b/src/app/administracion/page/categoria/form-categoria/form-categoria.component.css
@@ -1,7 +1,4 @@
-td{
-    vertical-align: middle;
-  }
-  .modal {
+.modal {
     display: none; /* Hidden by default */
     position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
@@ -42,16 +39,18 @@ td{
     width: 22px;
     height: 22px;
     border-color: black;
-    border-width: 1px;
     border-style: solid;
+    background-color: red;
   }
   
-  .btn-primary{
-    background-color: rgba(241, 126, 213, 0.67) !important;
-    color:#FFFFFF;
+  .btn{
+color: rgb(255, 255, 255);
+background-color: #e67f7f;
+border-radius: 20px;
+
   }
-  
-  .card-body{
-    border-color: rgba(241, 126, 213, 0.18); border-style: solid;
+
+  .container-contact100-form-btn{
+align-items: center;
+text-align: center;
   }
-  
