--- a/src/app/administracion/page/editar-info/editar-info.component.html
+++ b/src/app/administracion/page/editar-info/editar-info.component.html
@@ -6,9 +6,9 @@
             <div class="container-contact100">
                 <div class="wrap-contact100">
 
-                    <span class="contact100-form-title">
-                        <span class="contact100-form-combo">MI PERFIL</span>
-                    </span>
+
+                    <h1 class="contact100-form-title">Mi Perfil</h1>
+
 
                     <div class="row">
 
