--- a/src/app/administracion/page/empleado/empleado.component.html
+++ b/src/app/administracion/page/empleado/empleado.component.html
@@ -38,10 +38,11 @@
               
 
                       <td nzAlign="center">           
-                        <a [routerLink]="['/editarEmpleado',usuario.idUsuario]">
-                          g<i nz-icon nzType="edit" nzTheme="outline" style="font-size: 20px"></i>
+                        <a class="fas fa-edit"[routerLink]="['/editarEmpleado',usuario.idUsuario]">
+                          <i nz-icon nzType="edit" nzTheme="outline" style="font-size: 20px"></i>
                         </a>
                       </td>
+
 
                     </tr>
                   </tbody>
