--- a/src/app/home/inicio/inicio.component.html
+++ b/src/app/home/inicio/inicio.component.html
@@ -41,9 +41,12 @@
                         <h3>Categorias</h3>
                         <p class="mb-4">Revisa nuestras categorias de zapatos, donde puedes encontrar lo mejor en calzado en la Ciudad de Cúcuta</p><br>
                         <div class="row ">
-                            <div class="col-4 " *ngFor="let categoria of categorias; let img of imgs">
-                                <img src="../../../assets/images/image 11.png" alt="img">
-                                <!-- <img src="{{img.src}}" alt="img"> -->
+                            <div class="col-4 " *ngFor="let categoria of categorias;  let i = index;">
+                                <!-- <img src="../../../assets/images/image 11.png" alt="img"> -->
+                                <div class="center">
+                                  <img  src="{{imgs[i]}}" alt="img" id="imgCate">
+                                </div>
+                                
                                 <h4>{{categoria.nombre}}</h4>
                                 <p>{{categoria.descripcion}}</p>
                             </div>
@@ -56,6 +59,18 @@
 
                     
                 </div><!-- End .row --><hr>
+                <div class="row mt-4 explora">
+                  <div class="col-lg-6 text-center">
+                      <div class="">
+                        <img  src="{{imgs[0]}}" alt="img" id="imgExp">
+                      </div>
+                  </div>
+                  <div class="col-4 text-center exploratext">
+                    <h3 class="mt-4 mb-4">Explora nuestros nuevos modelos</h3>
+                    <p class="mt-4 mb-4">No te quedes atrás ¿Qué esperas para tener los tuyos?</p>
+                    <div class="center"> <a href="/productos"><button class="btn-product btn btn-round">Explora</button></a> </div>
+                    </div>
+              </div><hr>
                 <div class="row mt-4 insta">
                     <div class="col-lg-12 text-center">
                         <h3 class="mt-4 mb-4">Nuestro Instagram</h3>
